<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/forum_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:text="What is Lorem Ipsum?" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been..." />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tag_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="false"
            android:padding="10dp">

            <ImageView
                android:id="@+id/upvote_button"
                android:clickable="true"
                android:onClick="upVote"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_vote_up"
                android:background="@color/transparent"/>

            <TextView
                android:id="@+id/upvote_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:textSize="16dp"
                android:text="0" />

            <ImageView
                android:id="@+id/downvote_button"
                android:clickable="true"
                android:onClick="downVote"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_vote_down"
                android:layout_marginLeft="30dp"
                android:background="@color/transparent"/>

            <TextView
                android:id="@+id/downvote_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:textSize="16dp"
                android:text="0" />


         </LinearLayout>


    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorSeparator"/>

</LinearLayout>