...
            android:textColor="@color/colorBlack"
            />


    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/forum_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />





    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:clickable="true"
        android:onClick="launchPostActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_alignParentBottom="true"
...
